--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">madproject</string>
+    <string name="app_name">FoodEase</string>
     <string name="title_home">Home</string>
     <string name="title_ordercart">Order Cart</string>
     <string name="title_orderhistory">Order History</string>
